Import and test IACT scripts only for Python 2.6 or later.

--- a/cscripts/__init__.py.in
+++ b/cscripts/__init__.py.in
@@ -1,7 +1,7 @@
 # ==========================================================================
 # cscripts Python module
 #
-# Copyright (C) 2015 Juergen Knoedlseder
+# Copyright (C) 2015-2016 Juergen Knoedlseder
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,12 +17,14 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 # ==========================================================================
+# Python version check
+import sys
+req_version = (2,7)
+cur_version = sys.version_info
 
 # List all scripts in this module
 __all__ = [
     "cscaldb",
-    "csiactdata",
-    "csiactobs",
     "csinfo",
     "cslightcrv",
     "csmodelinfo",
@@ -37,17 +39,18 @@ __all__ = [
     "cstsdist",
     "cstsmapmerge",
     "csfindobs",
-    "csiactobs",
-    "csiactdata",
-    "csiactcopy",
     "obsutils",
     "test",
 ]
+if cur_version > req_version:
+    __all__.extend(["csfindobs",
+                    "csiactcopy",
+                    "csiactdata",
+                    "csiactobs"])
+
 
 # Import
 from .cscaldb      import cscaldb
-from .csiactdata   import csiactdata
-from .csiactobs    import csiactobs
 from .csinfo       import csinfo
 from .cslightcrv   import cslightcrv
 from .csmodelinfo  import csmodelinfo
@@ -61,11 +64,17 @@ from .cssens       import cssens
 from .csspec       import csspec
 from .cstsdist     import cstsdist
 from .cstsmapmerge import cstsmapmerge
-from .csfindobs    import csfindobs
-from .csiactobs    import csiactobs
-from .csiactdata   import csiactdata
-from .csiactcopy   import csiactcopy
 from . import obsutils
+if cur_version > req_version:
+    from .csfindobs    import csfindobs
+    from .csiactcopy   import csiactcopy
+    from .csiactdata   import csiactdata
+    from .csiactobs    import csiactobs
+
+# Delete version check variables
+del sys
+del req_version
+del cur_version
 
 # Add test function
 def test():
