--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -3,16 +3,18 @@
 # Scripts to be distributed in $(pyexecdir)/cscripts
 pythonscripts = __init__.py \
                 cspull.py cssens.py cstsdist.py cscaldb.py csresmap.py \
-                csiactobs.py csiactdata.py csobsdef.py csspec.py cslightcrv.py csobsinfo.py \
+                csobsdef.py csspec.py cslightcrv.py csobsinfo.py \
                 csinfo.py csmodelinfo.py csmodelmerge.py cstsmapmerge.py \
-                csobs2caldb.py csfindobs.py csiactcopy.py \
+                csobs2caldb.py \
+                csfindobs.py csiactcopy.py csiactdata.py csiactobs.py \
                 obsutils.py
 
 # Scripts for which symbolic links will be created in bindir
 linkscripts = cspull cssens cstsdist cscaldb csresmap \
-              csiactobs csiactdata csobsdef csspec cslightcrv csobsinfo \
+              csobsdef csspec cslightcrv csobsinfo \
               csinfo csmodelinfo csmodelmerge cstsmapmerge \
-              csobs2caldb csfindobs csiactcopy
+              csobs2caldb \
+              csfindobs csiactcopy csiactdata csiactobs
 
 # Distribute scripts
 EXTRA_DIST         = $(binscripts) $(pythonscripts)
