Test replacing relative by absolute Python imports.

--- a/cscripts/__init__.py.in
+++ b/cscripts/__init__.py.in
@@ -63,8 +63,9 @@ from @PYTHON_RELATIVE_IMPORT@csresmap     import csresmap
 from @PYTHON_RELATIVE_IMPORT@cssens       import cssens
 from @PYTHON_RELATIVE_IMPORT@csspec       import csspec
 from @PYTHON_RELATIVE_IMPORT@cstsdist     import cstsdist
-from @PYTHON_RELATIVE_IMPORT@cstsmapmerge import cstsmapmerge
-from @PYTHON_RELATIVE_IMPORT@             import obsutils
+#from @PYTHON_RELATIVE_IMPORT@cstsmapmerge import cstsmapmerge
+import cstsmapmerge
+import obsutils
 if cur_version > req_version:
     from @PYTHON_RELATIVE_IMPORT@csfindobs    import csfindobs
     from @PYTHON_RELATIVE_IMPORT@csiactcopy   import csiactcopy
