--- a/cscripts/__init__.py.in
+++ b/cscripts/__init__.py.in
@@ -50,27 +50,44 @@ if cur_version > req_version:
 
 
 # Import
-from @PYTHON_RELATIVE_IMPORT@cscaldb      import cscaldb
-from @PYTHON_RELATIVE_IMPORT@csinfo       import csinfo
-from @PYTHON_RELATIVE_IMPORT@cslightcrv   import cslightcrv
-from @PYTHON_RELATIVE_IMPORT@csmodelinfo  import csmodelinfo
-from @PYTHON_RELATIVE_IMPORT@csmodelmerge import csmodelmerge
-from @PYTHON_RELATIVE_IMPORT@csobs2caldb  import csobs2caldb
-from @PYTHON_RELATIVE_IMPORT@csobsdef     import csobsdef
-from @PYTHON_RELATIVE_IMPORT@csobsinfo    import csobsinfo
-from @PYTHON_RELATIVE_IMPORT@cspull       import cspull
-from @PYTHON_RELATIVE_IMPORT@csresmap     import csresmap
-from @PYTHON_RELATIVE_IMPORT@cssens       import cssens
-from @PYTHON_RELATIVE_IMPORT@csspec       import csspec
-from @PYTHON_RELATIVE_IMPORT@cstsdist     import cstsdist
+#from @PYTHON_RELATIVE_IMPORT@cscaldb      import cscaldb
+#from @PYTHON_RELATIVE_IMPORT@csinfo       import csinfo
+#from @PYTHON_RELATIVE_IMPORT@cslightcrv   import cslightcrv
+#from @PYTHON_RELATIVE_IMPORT@csmodelinfo  import csmodelinfo
+#from @PYTHON_RELATIVE_IMPORT@csmodelmerge import csmodelmerge
+#from @PYTHON_RELATIVE_IMPORT@csobs2caldb  import csobs2caldb
+#from @PYTHON_RELATIVE_IMPORT@csobsdef     import csobsdef
+#from @PYTHON_RELATIVE_IMPORT@csobsinfo    import csobsinfo
+#from @PYTHON_RELATIVE_IMPORT@cspull       import cspull
+#from @PYTHON_RELATIVE_IMPORT@csresmap     import csresmap
+#from @PYTHON_RELATIVE_IMPORT@cssens       import cssens
+#from @PYTHON_RELATIVE_IMPORT@csspec       import csspec
+#from @PYTHON_RELATIVE_IMPORT@cstsdist     import cstsdist
 #from @PYTHON_RELATIVE_IMPORT@cstsmapmerge import cstsmapmerge
+import cscaldb
+import csinfo
+import cslightcrv
+import csmodelinfo
+import csmodelmerge
+import csobs2caldb
+import csobsdef
+import csobsinfo
+import cspull
+import csresmap
+import cssens
+import csspec
+import cstsdist
 import cstsmapmerge
 import obsutils
 if cur_version > req_version:
-    from @PYTHON_RELATIVE_IMPORT@csfindobs    import csfindobs
-    from @PYTHON_RELATIVE_IMPORT@csiactcopy   import csiactcopy
-    from @PYTHON_RELATIVE_IMPORT@csiactdata   import csiactdata
-    from @PYTHON_RELATIVE_IMPORT@csiactobs    import csiactobs
+    #from @PYTHON_RELATIVE_IMPORT@csfindobs    import csfindobs
+    #from @PYTHON_RELATIVE_IMPORT@csiactcopy   import csiactcopy
+    #from @PYTHON_RELATIVE_IMPORT@csiactdata   import csiactdata
+    #from @PYTHON_RELATIVE_IMPORT@csiactobs    import csiactobs
+    import csfindobs
+    import csiactcopy
+    import csiactdata
+    import csiactobs
 
 # Delete version check variables
 del sys
