--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -7,7 +7,7 @@ MACOSX_DEPLOYMENT_TARGET=@CONFIGURE_MACOSX_DEPLOYMENT_TARGET@
 # Optional python bindings
 if WITH_PYTHON
   TEST_CSCRIPTS      = test_cscripts.sh
-  TEST_PYTHON_SCRIPT = test_python.py
+  TEST_PYTHON_SCRIPT = test_python.sh
   TEST_PYTHON_ENV    = PYTHONPATH=$(top_builddir):$(top_builddir)/pyext:$(top_builddir)/pyext/build/ctools/ctools:$(pythondir):$(pyexecdir):$(PYTHONPATH)
 endif
 
