--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -36,7 +36,7 @@ $ECHO "*****************"
 #
 # Remove any existing result files
 # ================================
-rm -rf *.fits *.xml *.dat *.reg
+rm -rf *.fits *.xml *.dat *.reg .coverage
 
 
 #
@@ -56,7 +56,7 @@ mkdir -p $CALDB
 # ================
 $ECHO -n "Test csobs2caldb: "
 chmod +x @abs_top_srcdir@/cscripts/csobs2caldb.py
-@abs_top_srcdir@/cscripts/csobs2caldb.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csobs2caldb.py \
   inobs="data/obs_unbinned.xml" \
   rspname="test_irfs" \
   chatter=4 > csobs2caldb.log
@@ -76,7 +76,7 @@ $ECHO " ok"
 # =============
 $ECHO -n "Test csobsdef: "
 chmod +x @abs_top_srcdir@/cscripts/csobsdef.py
-@abs_top_srcdir@/cscripts/csobsdef.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csobsdef.py \
   inpnt="data/pntdef.dat" \
   outobs="obs.xml" \
   caldb="irf" \
@@ -101,7 +101,7 @@ $ECHO " ok"
 # ==============
 $ECHO -n "Test csobsinfo: "
 chmod +x @abs_top_srcdir@/cscripts/csobsinfo.py
-@abs_top_srcdir@/cscripts/csobsinfo.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csobsinfo.py \
   inobs="obs.xml" \
   ds9file="obs.reg" \
   offset=yes \
@@ -123,7 +123,7 @@ $ECHO " ok"
 # ================
 $ECHO -n "Test csmodelinfo: "
 chmod +x @abs_top_srcdir@/cscripts/csmodelinfo.py
-@abs_top_srcdir@/cscripts/csmodelinfo.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csmodelinfo.py \
   inmodel="data/crab.xml" \
   ds9file="model.reg" > csmodelinfo.log
 $ECHO -n "."
@@ -143,7 +143,7 @@ $ECHO " ok"
 $ECHO -n "Test csmodelmerge: "
 # === space-separated ===
 chmod +x @abs_top_srcdir@/cscripts/csmodelmerge.py
-@abs_top_srcdir@/cscripts/csmodelmerge.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csmodelmerge.py \
   inmodels="data/crab.xml data/source1.xml" \
   outmodel="merged_models.xml" > csmodelmerge.log
 $ECHO -n "."
@@ -155,7 +155,7 @@ else
   exit 1
 fi
 # === comma-separated ===
-@abs_top_srcdir@/cscripts/csmodelmerge.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csmodelmerge.py \
   inmodels="data/crab.xml,data/source1.xml" \
   outmodel="merged_models2.xml" > csmodelmerge.log
 $ECHO -n "."
@@ -167,7 +167,7 @@ else
   exit 1
 fi
 # === wildcard string ===
-@abs_top_srcdir@/cscripts/csmodelmerge.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csmodelmerge.py \
   inmodels="data/model_cube_background*.xml" \
   outmodel="merged_models3.xml" > csmodelmerge.log
 $ECHO -n "."
@@ -180,7 +180,7 @@ else
 fi
 # === ascii-file ===
 ls data/model_cube_background* > models.txt
-@abs_top_srcdir@/cscripts/csmodelmerge.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csmodelmerge.py \
   inmodels="@models.txt" \
   outmodel="merged_models4.xml" > csmodelmerge.log
 $ECHO -n "."
@@ -201,7 +201,7 @@ rm models.txt
 $ECHO -n "Test cstsmapmerge: "
 # === comma-separated ===
 chmod +x @abs_top_srcdir@/cscripts/cstsmapmerge.py
-@abs_top_srcdir@/cscripts/cstsmapmerge.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/cstsmapmerge.py \
   inmaps="data/tsmap_0.fits,data/tsmap_1.fits" \
   outmap="merged_tsmap1.fits" > cstsmapmerge.log
 $ECHO -n "."
@@ -213,7 +213,7 @@ else
   exit 1
 fi
 # === space-separated ===
-@abs_top_srcdir@/cscripts/cstsmapmerge.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/cstsmapmerge.py \
   inmaps="data/tsmap_0.fits data/tsmap_1.fits" \
   outmap="merged_tsmap2.fits" > cstsmapmerge.log
 $ECHO -n "."
@@ -225,7 +225,7 @@ else
   exit 1
 fi
 # === wildcard string ===
-@abs_top_srcdir@/cscripts/cstsmapmerge.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/cstsmapmerge.py \
   inmaps="data/tsmap_*.fits" \
   outmap="merged_tsmap3.fits" > cstsmapmerge.log
 $ECHO -n "."
@@ -238,7 +238,7 @@ else
 fi
 # === ascii-file ===
 ls data/tsmap_*.fits > tsmaps.txt
-@abs_top_srcdir@/cscripts/cstsmapmerge.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/cstsmapmerge.py \
   inmaps="@tsmaps.txt" \
   outmap="merged_tsmap4.fits" > cstsmapmerge.log
 $ECHO -n "."
@@ -258,7 +258,7 @@ rm tsmaps.txt
 # ===========
 $ECHO -n "Test cspull: "
 chmod +x @abs_top_srcdir@/cscripts/cspull.py
-@abs_top_srcdir@/cscripts/cspull.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/cspull.py \
   inmodel="data/crab.xml" \
   outfile="pull.dat" \
   ntrials="3" \
@@ -291,7 +291,7 @@ $ECHO " ok"
 # ===========
 $ECHO -n "Test cssens: "
 chmod +x @abs_top_srcdir@/cscripts/cssens.py
-@abs_top_srcdir@/cscripts/cssens.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/cssens.py \
   inmodel="data/crab.xml" \
   srcname="Crab" \
   caldb="irf" \
@@ -317,7 +317,7 @@ $ECHO " ok"
 # =============
 $ECHO -n "Test cstsdist: "
 chmod +x @abs_top_srcdir@/cscripts/cstsdist.py
-@abs_top_srcdir@/cscripts/cstsdist.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/cstsdist.py \
   inmodel="data/crab.xml" \
   srcname="Crab" \
   outfile="ts.dat" \
@@ -349,7 +349,7 @@ $ECHO " ok"
 # =============
 $ECHO -n "Test csresmap: "
 chmod +x @abs_top_srcdir@/cscripts/csresmap.py
-@abs_top_srcdir@/cscripts/csresmap.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csresmap.py \
   inobs="data/crab_events.fits" \
   outmap="resmap.fits" \
   inmodel="data/crab.xml" \
@@ -381,7 +381,7 @@ $ECHO " ok"
 $ECHO -n "Test csspec: "
 # === Unbinned ===
 chmod +x @abs_top_srcdir@/cscripts/csspec.py
-@abs_top_srcdir@/cscripts/csspec.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csspec.py \
   inobs="data/crab_events.fits" \
   inmodel="data/crab.xml" \
   caldb="irf" \
@@ -401,7 +401,7 @@ else
   exit 1
 fi
 # === Binned ===
-@abs_top_srcdir@/cscripts/csspec.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csspec.py \
   inobs="data/crab_cntmap_small.fits.gz" \
   expcube="data/crab_expcube.fits.gz" \
   psfcube="data/crab_psfcube.fits.gz" \
@@ -431,7 +431,7 @@ $ECHO " ok"
 $ECHO -n "Test cslightcrv: "
 # === unbinned ===
 chmod +x @abs_top_srcdir@/cscripts/cslightcrv.py
-@abs_top_srcdir@/cscripts/cslightcrv.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/cslightcrv.py \
   inobs="data/crab_events.fits" \
   inmodel="data/crab.xml" \
   srcname="Crab" \
@@ -454,7 +454,7 @@ else
   exit 1
 fi
 # === binned ===
-@abs_top_srcdir@/cscripts/cslightcrv.py \
+@PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/cslightcrv.py \
   inobs="data/crab_events.fits" \
   inmodel="data/crab.xml" \
   srcname="Crab" \
@@ -494,7 +494,7 @@ if [ $python_version -ge 26 ]; then
   # ==============
   $ECHO -n "Test csfindobs: "
   chmod +x @abs_top_srcdir@/cscripts/csfindobs.py
-  @abs_top_srcdir@/cscripts/csfindobs.py \
+  @PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csfindobs.py \
     datapath="iactdata/" \
     prodname="unit-test" \
     ra="83.6331" \
@@ -517,7 +517,7 @@ if [ $python_version -ge 26 ]; then
   # ===============
   $ECHO -n "Test csiactcopy: "
   chmod +x @abs_top_srcdir@/cscripts/csiactcopy.py
-  @abs_top_srcdir@/cscripts/csiactcopy.py \
+  @PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csiactcopy.py \
     remote_master="iactdata/master.json" \
     outpath="iactdata_test" \
     prodname="unit-test" > csiactcopy.log
@@ -537,7 +537,7 @@ if [ $python_version -ge 26 ]; then
   # ==============
   $ECHO -n "Test csiactobs: "
   chmod +x @abs_top_srcdir@/cscripts/csiactobs.py
-  @abs_top_srcdir@/cscripts/csiactobs.py \
+  @PYTHON_COVERAGE@@abs_top_srcdir@/cscripts/csiactobs.py \
     datapath="iactdata/" \
     prodname="unit-test" \
     infile="iactrunlist.dat" \
