Exclude local files from coverage report.

--- a/Makefile.am
+++ b/Makefile.am
@@ -99,7 +99,7 @@ coverage:
 	fi; \
 	if type coverage >/dev/null 2>&1; then \
 	    export COVERAGE_FILE=test/.coverage; \
-		coverage xml --omit=**/gammalib/** -o coverage-report-python.xml; \
+		coverage xml --omit=**/gammalib/**,/usr/** -o coverage-report-python.xml; \
 	else \
 		echo "coverage script not found in PATH."; \
 	fi
