--- a/configure.ac
+++ b/configure.ac
@@ -998,6 +998,7 @@ AC_CONFIG_FILES([Makefile
                  test/Makefile
                  test/test_cscripts.sh
                  test/test_python.sh
+                 test/test_python_cscripts.sh
                  pyext/Makefile
                  pyext/setup.py
                  pyext/ctools/__init__.py
@@ -1010,6 +1011,7 @@ AC_CONFIG_FILES([Makefile
                  testconf.sh],
                 [if test -f test/test_cscripts.sh; then chmod +x test/test_cscripts.sh; fi;
                  if test -f test/test_python.sh; then chmod +x test/test_python.sh; fi;
+                 if test -f test/test_python_cscripts.sh; then chmod +x test/test_python_cscripts.sh; fi;
                  if test -f testconf.sh; then chmod +x testconf.sh; fi])
 AC_OUTPUT
 
