Adapt to new GApplication interface with private methods and add par file.

--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -10,7 +10,10 @@ pythonscripts = __init__.py \
                 obsutils.py
 
 # Parfiles to be distributed in $(prefix)/syspfiles
-parfiles = cscaldb.par
+parfiles = cspull.par cssens.par cstsdist.par cscaldb.par csresmap.par \
+           csobsdef.par csspec.par csobsinfo.par \
+           csmodelinfo.par csmodelmerge.par cstsmapmerge.par \
+           csobs2caldb.par 
 
 # Scripts for which symbolic links will be created in bindir
 linkscripts = cspull cssens cstsdist cscaldb csresmap \
