--- a/pyext/setup.py.in
+++ b/pyext/setup.py.in
@@ -108,10 +108,10 @@ data_files=[('@prefix@/share/ctools/swig', install_files)]
 
 # Optionally enable OpenMP
 if '@OPENMP_TRUE@' != '#':
-	extra_compile_args = ['@OPENMP_CXXFLAGS@']
+	extra_compile_args = ['@OPENMP_CXXFLAGS@','@COVERAGE_CXXFLAGS@']
 	extra_link_args    = ['@OPENMP_CXXFLAGS@']
 else:
-	extra_compile_args = []
+	extra_compile_args = ['@COVERAGE_CXXFLAGS@']
 	extra_link_args    = []
 
 # Optionally add link flag for El Capitan post-processing of modules
