Re-enable all unit tests.
Enhance ctbin Python module unit test to see that read_ahead() gets enabled. Success, so the Python module unit test impacts the c++ coverage, great!

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -17,11 +17,10 @@ TESTS_ENVIRONMENT = @RUNSHARED@=$(top_builddir)/src/.libs$(TEST_ENV_DIR):$(LIBDI
                     $(TEST_PYTHON_ENV)
 
 # Tests (these are the tests to be executed)
-#TESTS = test_ctools.sh \
-#        $(TEST_CSCRIPTS) \
-#        $(TEST_PYTHON_CTOOLS) \
-#        $(TEST_PYTHON_CSCRIPTS)
-TESTS = $(TEST_PYTHON_CTOOLS)
+TESTS = test_ctools.sh \
+        $(TEST_CSCRIPTS) \
+        $(TEST_PYTHON_CTOOLS) \
+        $(TEST_PYTHON_CSCRIPTS)
 
 # Add Valgrind rule
 valgrind:
