--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -30,7 +30,8 @@ testscripts = tests/__init__.py \
               ../test/test_csobs2caldb.py \
               ../test/test_cslightcrv.py \
               ../test/test_csfindobs.py \
-              ../test/test_csiactcopy.py
+              ../test/test_csiactcopy.py \
+              ../test/test_csiactdata.py
 
 # Test data to be distributed in $(pyexecdir)/cscripts/tests/data
 testdata    = ../test/data/crab.xml \
