Add csmodelmerge script unit test.

--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -30,6 +30,7 @@ testscripts = tests/__init__.py \
               ../test/test_csobs2caldb.py \
               ../test/test_cslightcrv.py \
               ../test/test_csmodelinfo.py \
+              ../test/test_csmodelmerge.py \
               ../test/test_csfindobs.py \
               ../test/test_csiactcopy.py \
               ../test/test_csiactdata.py \
@@ -40,7 +41,10 @@ testdata    = ../test/data/crab.xml \
               ../test/data/obs_unbinned.xml \
               ../test/data/crab_events.fits.gz \
               ../test/data/crab_cntmap.fits.gz \
-              ../test/data/exclusion.reg
+              ../test/data/exclusion.reg \
+              ../test/data/models.txt \
+              ../test/data/model_cube_background.xml \
+              ../test/data/model_cube_background2.xml
 
 # Test data to be distributed in $(pyexecdir)/cscripts/tests/iactdata
 testiactdata = ../test/iactdata/hdu-index.fits.gz \
