Add initial version of ctmapcube tool (so far the initial version generates an empty map cube)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,6 +16,7 @@ SUBDIRS = support \
           ctpsfcube \
           ctedispcube \
           ctbkgcube \
+          ctmapcube \
           ctcubemask \
           cttsmap \
           ctbutterfly \
@@ -43,6 +44,7 @@ libctools_la_LIBADD = support/libsupport.la \
                       ctpsfcube/libctpsfcube.la \
                       ctedispcube/libctedispcube.la \
                       ctbkgcube/libctbkgcube.la \
+                      ctmapcube/libctmapcube.la \
                       ctcubemask/libctcubemask.la \
                       cttsmap/libcttsmap.la \
                       ctbutterfly/libctbutterfly.la \
