--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ src/ctexpcube/ctexpcube
 src/ctpsfcube/ctpsfcube
 src/ctedispcube/ctedispcube
 src/ctbkgcube/ctbkgcube
+src/ctmapcube/ctmapcube
 src/ctcubemask/ctcubemask
 src/ctbutterfly/ctbutterfly
 src/ctulimit/ctulimit
